<resources>
    <string name="app_name">palm-app</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Surf Studio</string>
    <string name="nav_header_subtitle">surfstudio@surf.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_register">Register</string>
    <string name="menu_confirm_registration">Confirm Registration</string>
    <string name="menu_ble_advertising">Check BLE Advertising</string>
    <string name="start_button_label">START</string>
    <string name="restart_button_label">RESTART</string>
    <string name="menu_restart">Restart</string>
    <string name="start_advertising_text">Start Advertising</string>
    <string name="stop_advertising_text">Stop Advertising</string>
    <string name="next">Next</string>
    <string name="prev">Previous</string>
    <string name="footer_label">Actions</string>

    <string name="user_id_label">User ID: %s</string>
    <string name="user_id_not_available">N/A</string>
    <string name="device_label">Device: %1$s</string>
    <string name="device_status_label">Device: %1$s (%2$s)</string>
    <string name="notifications_label">Notifications: %1$s</string>
    <string name="chunk_label_template">Chunk: %1$s / %2$s</string>
</resources>